--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,256 @@
-instagrapi~=2.0.3
-redis~=5.1.0b4
-selenium~=4.18.1
-pillow~=10.2.0
-pathlib~=1.0.1
-setuptools~=69.2.0
-typing~=3.7.4.3
-requests~=2.31.0
-asyncio~=3.4.3
-asyncpg~=0.29.0
-python-dotenv~=1.0.1
-aioconsole~=0.7.0
-aiohttp~=3.9.3
-tenacity~=8.2.3
-aioredis~=2.0.1
-pytest~=8.1.1
-cachetools~=5.3.3
-pydantic~=2.6.4
-moviepy~=2.0.0.dev2
-urllib3~=2.2.1
-backoff~=2.2.1
-Django~=5.0.3
+aioconsole==0.7.0
+aiohttp==3.9.3
+aiopg==1.5.0a1
+aioredis==2.0.1
+aiosignal==1.3.1
+alabaster==0.7.16
+aniso8601==9.0.1
+annotated-types==0.6.0
+anyio==3.7.1
+aredis==1.1.8
+argcomplete==3.2.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.8.0
+asttokens==2.4.1
+async-lru==2.0.4
+async-timeout==4.0.3
+AsyncClient==0.0.1
+asyncio==3.4.3
+asyncpg==0.29.0
+attrs==23.2.0
+Babel==2.14.0
+backoff==2.2.1
+beautifulsoup4==4.12.3
+black==24.3.0
+bleach==6.1.0
+blinker==1.7.0
+bokeh==3.3.4
+Brotli==1.1.0
+bs4==0.0.2
+cachetools==5.3.3
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.0
+cryptography==42.0.5
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.8.0rc2
+distlib==0.3.8
+distro==1.9.0
+distutils_ui==0.1.3
+Django==5.0.3
+django-admin-black-pro @ git+https://github.com/app-generator/priv-django-admin-black-pro@55f7fa7728254e49d5d3311463dc0931c83c24ce
+django-debug-toolbar==4.3.0
+docutils==0.18.1
+dynaconf==3.2.5
+executing==2.0.1
+fastjsonschema==2.19.1
+filelock==3.13.1
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.2.0
+gitignore_parser==0.1.11
+gpt-api-python==1.0.3
+gpt-automation==0.1.7
+greenlet==3.0.3
+gunicorn==21.2.0
+h11==0.12.0
+httpcore==0.13.7
+httpx==1.0.0b0
+huggingface-hub==0.21.4
+idna==3.6
+imageio==2.34.0
+imageio-ffmpeg==0.4.9
+imagesize==1.4.1
+iniconfig==2.0.0
+InstagramAPI==1.0.2
+instagramthiefBot==1.2
+instagrapi==2.1.1
+instagrapi-add-exact-matches-to-location==1.16.41.1
+ipykernel==6.29.3
+ipython==8.22.2
+ipywidgets==8.1.2
+isal==1.6.1
+isodate==0.6.1
+isoduration==20.11.0
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.3.2
+json5==0.9.22
+jsonpointer==2.4
+jsonschema==4.21.1
+jsonschema-path==0.3.2
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.4
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyter_server==2.13.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.1.4
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.4
+jupyterlab_widgets==3.0.10
+lazy-object-proxy==1.10.0
+linkify-it-py==2.0.3
+logger==1.4
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.1
+matplotlib-inline==0.1.6
+mdit-py-plugins==0.4.0
+mdurl==0.1.2
+mistune==3.0.2
+more-itertools==10.2.0
+moviepy==2.0.0.dev2
+mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
+nbclient==0.9.1
+nbconvert==7.16.2
+nbformat==5.10.2
+nest-asyncio==1.6.0
+networkx==3.2.1
+notebook==7.1.2
+notebook_shim==0.2.4
+numpy==2.0.0b1
+openai==1.14.1
+openapi-core==0.19.0
+openapi-schema-validator==0.6.2
+openapi-spec-validator==0.7.1
+outcome==1.3.0.post0
+overrides==7.7.0
+packaging==24.0
+pandas==2.2.1
+pandocfilters==1.5.1
+panel==1.3.8
+param==2.0.2
+parse==1.20.1
+parso==0.8.3
+pathable==0.4.3
+pathlib==1.0.1
+pathspec==0.12.1
+pexpect==4.9.0
+pillow==10.2.0
+pipx==1.4.3
+platformdirs==4.2.0
+pluggy==1.4.0
+proglog==0.1.10
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+psycopg2-pool==1.2
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pxpowershell==1.0.0
+pycparser==2.21
+pycryptodome==3.20.0
+pycryptodomex==3.20.0
+pydantic==2.6.4
+pydantic_core==2.16.3
+Pygments==2.17.2
+pyOpenSSL==24.1.0
+pyotp==2.9.0
+pyperclip==1.8.2
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
+PySocks==1.7.1
+pytest==8.1.1
+pytest-asyncio==0.23.6
+pytest-localserver==0.8.1
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.0.1
+python-json-logger==2.0.7
+pytz==2024.1
+pyviz_comms==3.0.1
+pywin32==306
+pywinpty==2.0.13
+PyYAML==6.0.1
+pyzmq==26.0.0b2
+qtconsole==5.5.1
+QtPy==2.4.1
+redis==5.1.0b4
+referencing==0.34.0
+regex==2023.12.25
+requests==2.31.0
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
+rpds-py==0.18.0
+safetensors==0.4.2
+scikit-learn==1.4.1.post1
+scipy==1.13.0rc1
+scoop==0.7.2.0
+selenium==4.18.1
+self==2020.12.3
+Send2Trash==1.8.2
+setuptools==69.2.0
+six==1.16.0
+sniffio==1.3.1
+snowballstemmer==2.2.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+Sphinx==7.2.6
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+SQLAlchemy==2.0.29
+sqlparse==0.4.4
+stack-data==0.6.3
+svgwrite==1.4.3
+sympy==1.12
+tblib==3.0.0
+tenacity==8.2.3
+terminado==0.18.1
+threadpoolctl==3.4.0
+tinycss2==1.2.1
+tokenizers==0.15.2
+torch==2.2.1
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.2
+transformers==4.39.1
+Tree==0.2.4
+trio==0.25.0
+trio-websocket==0.11.1
+types-python-dateutil==2.9.0.20240316
+typing==3.7.4.3
+typing_extensions==4.11.0rc1
+tzdata==2024.1
+uc-micro-py==1.0.3
+ujson==5.9.0
+uri-template==1.3.0
+urllib3==2.2.1
+userpath==1.9.2
+validators==0.24.0
+virtualenv==20.25.1
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.7.0
+Werkzeug==3.0.1
+wheel==0.43.0
+whitenoise==6.6.0
+widgetsnbextension==4.0.10
+wsproto==1.2.0
+xyzservices==2023.10.1
+yarl==1.9.4
+zlib-fast==0.2.0
