--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # Ignore compiled Python files
-*.pyc
+**.pyc
 
 # Ignore macOS Finder metadata files
-*.DS_Store
+**.DS_Store
 
 # Ignore Python egg files
-*.egg*
+**.egg*
 
 # Ignore SQLite database files
-*.sqlite*
+**.sqlite*
 
 # Ignore environment variable files
 .env
@@ -17,10 +17,13 @@
 # Ignore Yarn lock files
 yarn.lock
 
-# Include specific directories
-!/database/
-!/.dvc/
-!/.idea/
+# Include specific directories and their contents
+/database/**
+!/database/*.sqlite*
+
+/.dvc/**
+
+/.idea/**
 
 # Include environment variable files in specific directories
 dashboard/.env
