--- a/dashboard/env.sample
+++ b/dashboard/env.sample
@@ -1,11 +1,23 @@
-# True for development, False for production
-DEBUG=True
+# Set to True for development, False for production
+DEBUG = True
 
-SECRET_KEY=<STRONG_KEY_HERE>
+# Replace <STRONG_KEY_HERE> with a strong secret key
+SECRET_KEY = "<STRONG_KEY_HERE>"
 
-# DB_ENGINE=mysql
-# DB_HOST=localhost
-# DB_NAME=appseed_db
-# DB_USERNAME=appseed_db_usr
-# DB_PASS=pass
-# DB_PORT=3306
+# Database configuration
+# Set to appropriate values for your environment
+DB_ENGINE = "mysql"
+DB_HOST = "localhost"
+DB_NAME = "appseed_db"
+DB_USERNAME = "appseed_db_usr"
+DB_PASS = "pass"  # Replace with your actual database password
+DB_PORT = 3306
+
+# Construct the database URI
+import urllib.parse
+
+database_uri = f"{DB_ENGINE}://{DB_USERNAME}:{urllib.parse.quote(DB_PASS)}@" \
+               f"{DB_HOST}:{DB_PORT}/{DB_NAME}"
+
+# Example usage
+print(database_uri)
