--- a/services/instagram/desktop.ini
+++ b/services/instagram/desktop.ini
@@ -1,6 +1,8 @@
 [.ShellClassInfo]
-IconResource=C:\Users\Andreas\Downloads\instagram.ico,0
+IconFile=C:\full\path\to\your\icon.ico
+IconIndex=0
 [ViewState]
 Mode=
 Vid=
 FolderType=Generic
+
