--- a/services/instagram/instagrapi/docker-compose.yml
+++ b/services/instagram/instagrapi/docker-compose.yml
@@ -1,42 +1,53 @@
-version: "3.4"
+version: "3.8"
 
-x-mount-app-and-user-git-config:
+x-mount-app-and-user-git-config: &app-config
   volumes:
     - ./:/app
-    - ~/.gitconfig:/home/instagrapi/.gitconfig # allow a script to commit as a user
+    - ~/.gitconfig:/home/instagrapi/.gitconfig:ro
+
+x-devbox-base: &devbox-base
+  build:
+    dockerfile: "./docker/devbox.dockerfile"
+    context: "."
+  tty: true
+  networks:
+    - app-network
+  volumes: *app-config
 
 services:
+  devbox:
+    <<: *devbox-base
 
-  # "devbox" to enable the developer to have a fully loaded development environment
-  devbox: &devbox
-    build:
-      dockerfile: "./docker/devbox.dockerfile"
-      context: "."
-    tty: true
-    volumes:
-      - "./:/app"
-
-  # "test" enables the developer to run all the tests and linting locally
   test:
-    <<: *devbox
+    <<: *devbox-base
     command: "docker/run_tests.sh --format-code"
 
   tests:
-    <<: *devbox
+    <<: *devbox-base
     command: "python -m unittest tests"
 
   lock-requirements:
-    <<: *devbox
+    <<: *devbox-base
     entrypoint: "/bin/bash"
     command: "docker/lock_requirements.sh"
 
-  # generate and serve the project documentation locally
   mkdocs:
-    <<: *devbox
-    entrypoint: "mkdocs"
+    <<: *devbox-base
+    image: "lscr.io/linuxserver/mkdocs:latest"
     ports:
       - "8000:8000"
     command: [ "serve", "--dev-addr=0.0.0.0:8000" ]
 
   mike:
+    image: "lscr.io/linuxserver/mike:latest"
     entrypoint: "mike"
+
+networks:
+  app-network:
+    driver: bridge
+
+x-docker-buildx: &buildx-config
+  builder:
+    name: my-builder
+    platforms:
+      - linux
