--- a/services/instagram/instagrapi/.github/workflows/python-package.yml
+++ b/services/instagram/instagrapi/.github/workflows/python-package.yml
@@ -12,42 +12,7 @@ env:
   PYTHON_VERSION: "3.9.14"
 
 jobs:
-  bandit:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      - name: Install dependencies
-        uses: ./.github/actions/install-dependencies
-        with:
-          test-requirements: "true"
-
-      - name: Run bandit
-        run: bandit --ini .bandit -r instagrapi
-
-  flake8:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      - name: Install dependencies
-        uses: ./.github/actions/install-dependencies
-        with:
-          test-requirements: "true"
-
-      - name: Run flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --statistics
-  isort:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -61,8 +26,24 @@ jobs:
           requirements: "true"
           test-requirements: "true"
 
-      - name: Run isort
-        run: isort --check-only instagrapi
+  bandit:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - run: bandit --ini .bandit -r instagrapi
+
+  flake8:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+      - run: flake8 . --count --exit-zero --statistics
+
+  isort:
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - run: isort --check-only instagrapi
 
   test:
     runs-on: ubuntu-latest
@@ -86,14 +67,6 @@ jobs:
         run: pytest -sv tests.py::ClientMediaTestCase
       - name: Run user test
         run: pytest -sv tests.py::ClientUserTestCase
-      # - name: Run comment test
-      #   run: pytest -sv tests.py::ClientCommentTestCase
-      # - name: Run location test
-      #   run: pytest -sv tests.py::ClientLocationTestCase
-      # - name: Run hashtag test
-      #   run: pytest -sv tests.py::ClientHashtagTestCase
-      # - name: Run share test
-      #   run: pytest -sv tests.py::ClientShareTestCase
       - name: Run highlight test
         run: pytest -sv tests.py::ClientHighlightTestCase
 
@@ -103,21 +76,16 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
       - name: Install dependencies
         uses: ./.github/actions/install-dependencies
         with:
           requirements: "true"
           test-requirements: "true"
-
       - name: Build Docs
         run: mkdocs build --strict
-
-      # upload artifact for dev build
       - name: Upload coverage results artifact
         if: github.ref != 'refs/heads/main'
         uses: actions/upload-artifact@v4
@@ -131,17 +99,14 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-
       - name: Install dependencies
         uses: ./.github/actions/install-dependencies
         with:
           requirements: "true"
           test-requirements: "true"
-
       - name: Push documentaiton changes
         uses: ./.github/actions/publish-docs-with-mike
         with:
