--- a/services/instagram/instagrapi/requirements-test.txt
+++ b/services/instagram/instagrapi/requirements-test.txt
@@ -1,13 +1,8 @@
-flake8==7.0.0
-Pillow==10.2.0
-isort==5.13.2
-bandit==1.7.7
-mike==2.0.0
-markdown-include==0.8.1
-mkdocs-material==9.5.5
-mkdocs-minify-plugin==0.7.2
-mkdocstrings==0.24.0
-./util/mkdocs-redirects
-./util/mkdocstrings_patch_type_aliases
-pytest-xdist==3.5.0
-pytest~=7.4.4
+[tool.bandit]
+skips = ["B101", "B311"]
+
+[tool.isort]
+profile = "black"
+
+[tool.mike]
+
