--- a/services/tinder/requirements.txt
+++ b/services/tinder/requirements.txt
@@ -1,7 +1,10 @@
-selenium==4.8.3 
-undetected-chromedriver==3.4.6 
-webdriver-manager==  3.8.6 
-Pillow==10.0.1
-deepface
-opencv-python
-numpy
+selenium==4.10.0
+undetected-chromedriver==3.1.5
+webdriver-manager==3.8.7
+Pillow==9.3.0
+deepface==0.0.62
+opencv-python==4.7.0.62
+numpy==1.24.1
+
+
+pip install -r requirements.txt
