--- a/.ai/config.properties
+++ b/.ai/config.properties
@@ -1,1 +1,4 @@
-is_active=true
+is_active = true
+
+# Add comments to improve readability
+# Use lowercase and underscores for variable names (snake\_case)
