--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,18 +1,26 @@
-FROM python:3.9
+FROM python:3.9-slim-buster
 
 # set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 
+# change to the app directory
+WORKDIR /app
+
+# copy and install python dependencies
 COPY requirements.txt .
-# install python dependencies
-RUN pip install --upgrade pip
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt && \
+    rm requirements.txt
 
+# copy the rest of the application
 COPY . .
 
-# running migrations
+# run migrations
 RUN python manage.py migrate
 
-# gunicorn
-CMD ["gunicorn", "--config", "gunicorn-cfg.py", "core.wsgi"]
+# expose the port
+EXPOSE 8000
+
+# run gunicorn
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "3", "--threads", "2", "core.wsgi"]
