--- a/dashboard/env.sample
+++ b/dashboard/env.sample
@@ -10,14 +10,16 @@ DB_ENGINE = "mysql"
 DB_HOST = "localhost"
 DB_NAME = "appseed_db"
 DB_USERNAME = "appseed_db_usr"
-DB_PASS = "pass"  # Replace with your actual database password
+DB_PASSWORD = "<DB_PASSWORD>"  # Replace with your actual database password
 DB_PORT = 3306
 
 # Construct the database URI
 import urllib.parse
 
-database_uri = f"{DB_ENGINE}://{DB_USERNAME}:{urllib.parse.quote(DB_PASS)}@" \
-               f"{DB_HOST}:{DB_PORT}/{DB_NAME}"
+database_uri = (
+    f"{DB_ENGINE}://{DB_USERNAME}:{urllib.parse.quote(DB_PASSWORD)}@"
+    f"{DB_HOST}:{DB_PORT}/{DB_NAME}"
+)
 
 # Example usage
 print(database_uri)
