--- a/services/instagram/.github/workflows/codeql-analysis.yml
+++ b/services/instagram/.github/workflows/codeql-analysis.yml
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'python' ]
+        language: [ 'python', 'javascript', 'java' ]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python' ]
         # Learn more:
         # https://docs.github.com/en/free-pro-team@latest/github/finding-security-vulnerabilities-and-errors-in-your-code/configuring-code-scanning#changing-the-languages-that-are-analyzed
@@ -40,6 +40,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        id: checkout
 
       # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
@@ -69,3 +70,22 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          # Add the 'codeql-analysis' label to the pull request when analysis is triggered
+          label: codeql-analysis
+
+  # Add a status check to the repository's settings to fail the pull request if any analysis fails
+  notify:
+    name: Notify
+    runs-on: ubuntu-latest
+    needs: analyze
+    if: needs.analyze.outputs.result != 'success'
+    steps:
+      - name: Set status to failed
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { context }
