--- a/services/instagram/.pre-commit-config.yaml
+++ b/services/instagram/.pre-commit-config.yaml
@@ -3,13 +3,17 @@ repos:
     rev: v4.3.0
     hooks:
       - id: check-yaml
+        args: ["--pygments"]
       - id: end-of-file-fixer
       - id: trailing-whitespace
+        args: ["--wide"]
   - repo: python/black
     rev: 22.8.0
     hooks:
       - id: black
+        args: ["--line-length", "120"]
   - repo: pycqa/flake8
     rev: 5.0.4
     hooks:
       - id: flake8
+        args: ["--count", "--select=E9,F63,F7,F82"]
