--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,17 @@
-# path/to/requirements.txt
-
-# Removed package versions to allow pip to attempt to solve the dependency conflicts
+# Base packages
 aioconsole
 aiohttp
 aiopg
 aioredis
 aiosignal
-alabaster
-aniso8601
-annotated-types
 anyio
 aredis
 argcomplete
 argon2-cffi
 argon2-cffi-bindings
 arrow
-asgiref
-asttokens
 async-lru
 async-timeout
-AsyncClient
 asyncio
 asyncpg
 attrs
@@ -38,7 +30,6 @@ cffi
 charset-normalizer
 click
 colorama
-comm
 contourpy
 cryptography
 debugpy
@@ -47,27 +38,6 @@ defusedxml
 distlib
 distro
 distutils_ui
-Django
-django-debug-toolbar
-docutils
-dynaconf
-executing
-fastjsonschema
-filelock
-fqdn
-frozenlist
-fsspec
-gitignore_parser
-gunicorn
-h11
-httpcore
-httpx
-idna
-imageio
-imageio-ffmpeg
-imagesize
-iniconfig
-instagramthiefBot
 ipykernel
 ipython
 ipywidgets
@@ -98,7 +68,6 @@ jupyterlab_widgets
 lazy-object-proxy
 linkify-it-py
 logger
-Markdown
 markdown-it-py
 MarkupSafe
 marshmallow
@@ -120,9 +89,6 @@ notebook
 notebook_shim
 numpy
 openai
-openapi-core
-openapi-schema-validator
-openapi-spec-validator
 outcome
 overrides
 packaging
@@ -144,12 +110,6 @@ proglog
 prometheus_client
 prompt-toolkit
 psutil
-psycopg2
-psycopg2-binary
-psycopg2-pool
-ptyprocess
-pure-eval
-pxpowershell
 pycparser
 pycryptodome
 pycryptodomex
@@ -181,71 +141,8 @@ QtPy
 redis
 referencing
 regex
-requests>=2.0.1,<3.0.0  # Loosen version constraint
+requests
 requests-toolbelt
 rfc3339-validator
 rfc3986
-rfc3986-validator
-rpds-py
-safetensors
-scikit-learn
-scipy
-scoop
-selenium
-self
-Send2Trash
-setuptools
-six
-sniffio
-snowballstemmer
-sortedcontainers
-soupsieve
-Sphinx
-sphinxcontrib-applehelp
-sphinxcontrib-devhelp
-sphinxcontrib-htmlhelp
-sphinxcontrib-jsmath
-sphinxcontrib-qthelp
-sphinxcontrib-serializinghtml
-SQLAlchemy
-sqlparse
-stack-data
-svgwrite
-sympy
-tblib
-tenacity
-terminado
-threadpoolctl
-tinycss2
-tokenizers
-torch
-tornado
-tqdm
-traitlets
-transformers
-Tree
-trio
-trio-websocket
-types-python-dateutil
-typing
-typing_extensions
-tzdata
-uc-micro-py
-ujson
-uri-template
-urllib3
-userpath
-validators
-virtualenv
-wcwidth
-webcolors
-webencodings
-websocket-client
-Werkzeug
-wheel
-whitenoise
-widgetsnbextension
-wsproto
-xyzservices
-yarl
-zlib-fast
+rfc398
