--- a/database/graphql.config.yml
+++ b/database/graphql.config.yml
@@ -1,2 +1,7 @@
-schema: schema.graphql
-documents: '**/*.graphql'
+schema:
+  - schema.graphql
+
+documents:
+  - 'src/**/*.graphql'
+  - 'graphql/**/*.graphql'
+
