--- a/services/instagram/.github/workflows/codeql-analysis.yml
+++ b/services/instagram/.github/workflows/codeql-analysis.yml
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'python' ]
+        language: [ 'python', 'javascript', 'java' ]
         # CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python' ]
         # Learn more:
         # https://docs.github.com/en/free-pro-team@latest/github/finding-security-vulnerabilities-and-errors-in-your-code/configuring-code-scanning#changing-the-languages-that-are-analyzed
@@ -68,4 +68,27 @@ jobs:
       #   make release
 
       - name: Perform CodeQL Analysis
+        id: codeql-analysis
         uses: github/codeql-action/analyze@v3
+
+      - name: Generate CodeQL Analysis Report
+        uses: github/codeql-action/codeql-analysis-report@v3
+        with:
+          path: ${{ steps.codeql-analysis.outputs.report-path }}
+
+  codeql-analyze:
+    name: CodeQL Analyze
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'python', 'javascript', 'java' ]
+
+    steps:
+      - name: Checkout repository
+
