--- a/services/instagram/requirements-test.txt
+++ b/services/instagram/requirements-test.txt
@@ -4,5 +4,35 @@ skips = ["B101", "B311"]
 [tool.isort]
 profile = "black"
 
-[tool.mike]
+[tool.mypy]
+check_untyped_defs = true
+disallow_untyped_defs = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_return_any = true
+
+[tool.flake8]
+max-complexity = 10
+ignore = E203, E266, W503
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+name = "my_package"
+version = "0.1.0"
+description = "My package description"
+authors = ["Your Name <you@example.com>"]
+
+[tool.poetry.dependencies]
+python = "^3.8"
+numpy = "^1.21.0"
+
+[tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+bandit = "^1.7.1"
+isort = "^5.9.3"
+mypy = "^0.910"
+flake8 = "^3.9.2"
 
