--- a/services/tinder/requirements.txt
+++ b/services/tinder/requirements.txt
@@ -1,7 +1,13 @@
-selenium==4.8.3 
-undetected-chromedriver==3.4.6 
-webdriver-manager==  3.8.6 
-Pillow==10.0.1
+selenium>=4.8.3
+undetected-chromedriver>=3.4.6
+webdriver-manager>=3.8.6
+Pillow>=10.0.1
 deepface
 opencv-python
 numpy
+
+
+pip freeze > requirements.txt
+
+
+pip install -r requirements.txt
