--- a/services/instagram/instagrapi/.gitignore
+++ b/services/instagram/instagrapi/.gitignore
@@ -1,8 +1,14 @@
-/*.mp4
-/*.jpg
-/*.m4a
-# emacs
+# File extensions and directories to be ignored by version control systems
+
+# Media files
+*.mp4
+*.jpg
+*.m4a
+
+# Emacs temporary files
 *~
+
+# macOS specific files
 .DS_Store
 
 # Byte-compiled / optimized / DLL files
@@ -35,8 +41,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -92,10 +96,10 @@ ipython_config.py
 .python-version
 
 # pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
+# It is recommended to include Pipfile.lock in version control.
+# However, in case of collaboration, if having platform-specific dependencies or dependencies
+# having no cross-platform support, pipenv may install dependencies that don't work, or not
+# install all needed dependencies.
 #Pipfile.lock
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
@@ -142,3 +146,4 @@ dmypy.json
 # VSCode
 .vscode
 ig_settings.json
+
